1. Develop the Hibernate Demo.

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,13 @@ dependencies {
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.3'
 
 	// Hibernate
-	implementation 'org.hibernate:hibernate-core:6.0.2.Final'
+	implementation 'org.hibernate:hibernate-core:5.3.7.Final'
+
+	// JAX-B dependencies for JDK 9+ (API, java.xml.bind module)
+	// JAXB API被認為是Java EE API，因此不再包含在Java SE 9的預設類路徑中。在Java 11中，它們已從JDK中完全刪除。
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
+	implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
